# livid

./: Cakefile  LICENSE  README  README.md  TODO.md  livid-srv.cabal  livid-srv.sh  livid.conf  lividd.cabal  lividd.sh  package.yaml  stack.yaml  vidproj-srv.cabal  vidproj-srv.sh  vidproj.conf
client/: Cakefile
client/dev/: data.js
client/src/: keys.coffee
doc/dev/: notes
hsinstall/share/livid/site/: index.html
hsinstall/share/livid/site/css/: main.css
hsinstall/share/livid/systemd/user/: lividd.service
server/: README  vidproj-srv.cabal
server/src/: vidproj-srv.hs
server/util/resources/: happstack-lite.lhs
site/: index.html  main.css
site/css/: jquery-ui-1.9.2.custom.css  main.css
src/: vidproj-srv.hs
src/coffee/: main.coffee  shownav.coffee
src/hs/: livid-srv.hs  lividd.hs  vidproj-srv.hs
src/hs/Livid/: Conf.hs  Episode.hs  Log.hs  Program.hs
src/hs/Vidproj/: Conf.hs  Directory.hs  Episode.hs  Program.hs
util/: coffee-env  package.sh
util/prefs/: boring
util/resources/DEBIAN/: control
