name:                livid-srv
version:             1.5
cabal-version:       >= 1.2
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2013 Dino Morelli, Betty Diegel
author:              Dino Morelli, Betty Diegel
maintainer:          Dino Morelli <dino@ui3.info>,
                     Betty Diegel <bdiegel@usa.net>
stability:           experimental
homepage:            http://foo/bar/baz.html
synopsis:            Foo
description:         Bar Baz
category:            Unknown
tested-with:         GHC >= 7.4.1

executable           livid-srv
   main-is:          livid-srv.hs
   hs-source-dirs:   src/hs
   build-depends:    aeson,
                     base >= 3 && < 5,
                     bytestring,
                     containers,
                     directory,
                     filepath,
                     ghc-prim,
                     happstack-server,
                     mtl,
                     old-locale,
                     process,
                     regex-compat,
                     time,
                     time-compat,
                     transformers,
                     unix
   ghc-options:      -Wall -threaded
