name:                livid-srv
version:             1.5
cabal-version:       >= 1.2
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2013 Dino Morelli, Betty Diegel
author:              Dino Morelli, Betty Diegel
maintainer:          Dino Morelli <dino@ui3.info>,
                     Betty Diegel <bdiegel@usa.net>
stability:           experimental
homepage:            http://foo/bar/baz.html
synopsis:            LIst of VIDeos media browse/playback web app (Haskell, Coffeescript)
description:         livid is a web application for browsing a directory tree of video files, launching playback and later deleting those files if desired. It's designed to be run locally on a system from within a gui environment so it can launch a video player application (like vlc, for example).
category:            Application, Multimedia Player
tested-with:         GHC >= 7.4.1

source-repository    head
   type:             darcs
   location:         http://hub.darcs.net/dino/livid

executable           livid-srv
   main-is:          livid-srv.hs
   hs-source-dirs:   src/hs
   build-depends:    aeson,
                     base >= 3 && < 5,
                     bytestring,
                     containers,
                     directory,
                     filepath,
                     ghc-prim,
                     happstack-server,
                     mtl,
                     old-locale,
                     process,
                     regex-compat,
                     time,
                     time-compat,
                     transformers,
                     unix
   ghc-options:      -Wall -threaded
