name:                lividd
version:             1.8
cabal-version:       >= 1.10
build-type:          Simple
license:             ISC
license-file:        LICENSE
copyright:           2012-2016 Dino Morelli, Betty Diegel
author:              Dino Morelli, Betty Diegel
maintainer:          Dino Morelli <dino@ui3.info>,
                     Betty Diegel <bdiegel@usa.net>
stability:           experimental
homepage:            http://hub.darcs.net/dino/livid
synopsis:            LIst of VIDeos media browse/playback web app
description:         livid is a web application for browsing a directory tree of video files, launching playback and later deleting those files if desired. It's designed to be run locally on a system from within a gui environment so it can launch a video player application (like vlc, for example).
category:            Application, Multimedia Player
tested-with:         GHC >= 8.0.1

source-repository    head
   type:             git
   location:         https://github.com/dino-/livid.git

executable           lividd
   main-is:          lividd.hs
   hs-source-dirs:   src/hs
   build-depends:    aeson,
                     base >= 3 && < 5,
                     containers,
                     directory,
                     filepath,
                     ghc-prim,
                     happstack-server,
                     hslogger,
                     mtl,
                     process,
                     regex-compat,
                     safe,
                     time,
                     transformers,
                     unix,
                     utf8-string
   ghc-options:      -Wall -threaded
   default-language: Haskell2010
   other-modules:    Livid.Conf
                     Livid.Episode
                     Livid.Log
                     Livid.Program
